Updated README with minimal informations (more later)

--- a/README
+++ b/README
@@ -1,38 +1,5 @@
 
-Graphic Server Protocol
-    gsp
-      io
-        command.py
-        convert.py
-        yaml.py
-        json.py
-        text.py
-      core
-      visual
-      transform
-      backend
-       - matplotlib
-       - datoviz
+# Graphic Server Protocol (GSP)
 
-# Dump information on available engines
-gsp.info()
+The Graphic Server Protocol (GSP) defines the protocol used between a visualization library or a visualization software a language server that provides graphical features.
 
-# Interactive session
-gsp.use("datoviz")
-gsp.use("matplotlib")
-
-# Remote session
-gsp.use("yaml/192.168.0.1:8000")
-gsp.use("json/192.168.0.1:8000")
-
-# Record session to a file
-gsp.save("session.yaml")
-gsp.save("session.json")
-
-# Load session from a file
-gsp.load("session.yaml")
-gsp.load("session.json")
-
-# Run session from a file
-gsp.run("session.yaml", engine="matplotlib", output="session.pdf")
-gsp.run("session.json", engine="datoviz", output="session.png")
